# dayly_service

./: .gitignore  Cargo.toml  Dockerfile  README.md  build-apk.sh  build-dmg.sh  build-docker.sh  build-tauri.sh  build.sh  docker-compose.yaml  translate-md.sh
.claude/skills/: translate-md.md
clipboard-monitor/: Cargo.toml
clipboard-monitor/src/: main.rs
common/: Cargo.toml
common/src/: color_extract.rs  lib.rs  read_metadata.rs
common/src/api/: base.rs  chat.rs  client.rs  clipboard.rs  dict.rs  files.rs  ggtt.rs  hello.http  hello.rs  images.rs  media_paths.rs  melatonin.rs  note.rs  openai.rs  pinyin.rs  short_note.rs  songs.rs  user.rs  user_directories.rs  videos.rs  whitenoise.rs
common/src/front_can_do/: base64.rs  game2048.rs  get_url_from_mhtml.rs  image_convert.rs  minesweeper.rs  password.rs  qrcode.rs  qrscan.rs  snake.rs  tetris.rs  timestamp.rs  uuid.rs
common/src/ocr/: det.rs  rec.rs
kongde/: README.md  pubspec.yaml
kongde/android/: build.gradle.kts  gradle.properties
kongde/android/app/: build.gradle.kts
kongde/integration_test/: simple_test.dart
kongde/ios/Runner/: Info.plist
kongde/ios/Runner.xcodeproj/: project.pbxproj
kongde/lib/: main.dart  utils.dart
kongde/lib/config/: app_config.dart
kongde/lib/controllers/: settings_controller.dart  tab_bar_controller.dart
kongde/lib/locales/: messages.dart
kongde/lib/pages/: actor_movies_page.dart  base64_tool_page.dart  calculator_tool_page.dart  chat_home_page.dart  chat_page.dart  clipboard_history_page.dart  collins_dict_page.dart  epub_reader_page.dart  file_manager_page.dart  genre_movies_page.dart  gif_compare_page.dart  home_page.dart  image_gallery_page.dart  image_viewer_page.dart  ldoce_dict_page.dart  local_music_page.dart  main_tab_page.dart  melatonin_detail_page.dart  melatonin_movies_page.dart  menu.dart  online_music_page.dart  password_tool_page.dart  pdf_viewer_page.dart  piano_keyboard_page.dart  play_local_music_page.dart  play_online_music_page.dart  profile_page.dart  scan_page.dart  settings_page.dart  setup_page.dart  sharing_page.dart  timestamp_tool_page.dart  tools_home_page.dart  unified_dict_page.dart  universal_video_player_page.dart  utils_page.dart  uuid_tool_page.dart  video_library_page.dart  wubi_query_page.dart
kongde/lib/services/: audio_player_handler.dart  music_service.dart  navigation_service.dart  sqlite_storage.dart  widget_channel.dart  widget_service.dart
kongde/lib/theme/: wp10_theme.dart
kongde/lib/utils/: ansi_text.dart  (+1 more)
kongde/linux/: CMakeLists.txt
kongde/rust/: Cargo.toml
kongde/rust/migrations/: 20260116161109_create_initial_schema.sql
kongde/rust/src/: frb_generated.rs  lib.rs
kongde/rust/src/api/: color.rs  db.rs  db_wasm.rs  logger_bridge.rs  metadata.rs  music_cache.rs  music_cache_wasm.rs  runtime.rs  runtime_wasm.rs  simple.rs
kongde/rust/src/api/utils/: base64.rs  calculator.rs  gif_decode.rs  password.rs  timestamp.rs  uuid.rs
kongde/rust/src/api/wifi_api/: chat.rs  chat_wasm.rs  clipboard.rs  dict.rs  files.rs  ggtt.rs  init.rs  init_wasm.rs  melatonin.rs  note.rs  song.rs  user.rs  webrtc.rs  webrtc_wasm.rs
kongde/rust/src/model/: music.rs  todo.rs
kongde/rust_builder/: pubspec.yaml
kongde/web/: index.html  manifest.json
kongde/windows/: CMakeLists.txt
local-agent/: Cargo.toml  build.rs
local-agent/proto/: clipboard_sync.proto
local-agent/src/: convert.rs  history.rs  main.rs  pasteboard.rs  sync.rs
my_type/: Cargo.toml
my_type/src/: lib.rs
my_type/src/dto/: base.rs  dict.rs  ggtt.rs  images.rs  melatonin.rs  mod.rs  note.rs  songs.rs  videos.rs
my_type/src/model/: admin.rs  basic_model.rs  chat.rs  dict.rs  ggtt.rs  haiyu_dict.rs  images.rs  media_paths.rs  melatonin_movie.rs  note.rs  openai.rs  short_notes.rs  single_char_pinyin.rs  songs.rs  user_directories.rs  videos.rs  view_name.rs
my_type/src/utils/: color.rs  mod.rs  table.rs
sifu_axuum/: .env.example  Cargo.toml  build.rs
sifu_axuum/.sqlx/: query-1fb33d52bd1a5dffc9afd0026fd1f94c1d9aef4dc7673c87e731a00b30b051cc.json  query-cf2e480bc992b6467743a8d83afff444009a7ccc579cd8d5169271834f99a0f5.json
sifu_axuum/examples/: hello.rs
sifu_axuum/migrations/: 001_user_directories_media_paths_playlists.sql  002_images_videos.sql  003_allow_list.sql  004_password_hash.sql  005_user_settings_columns.sql  006_auto_ttml_vocal.sql  007_cover_data.sql  008_melatonin_media_path_id.sql  009_chat_messages.sql  009_melatonin_video_paths.sql  010_melatonin_bt_list.sql  011_pinyin_dict.sql
sifu_axuum/proto/: clipboard.proto  hello.proto
sifu_axuum/src/: handlers.rs  lib.rs  logger.rs  main.rs  middleware.rs  route.rs  test_helpers.rs  utils.rs
sifu_axuum/src/config/: env.rs
sifu_axuum/src/controller/: chat.rs  clipboard.rs  dict.rs  files.rs  ggtt.rs  images.rs  media_paths.rs  melatonin.rs  mhtml_convert.rs  note.rs  ocr.rs  openai.rs  openai_session.rs  pinyin.rs  short_notes.rs  songs.rs  user.rs  user_directories.rs  videos.rs  webrtc.rs
sifu_axuum/src/graphql/: handlers.rs  mod.rs  mutation.rs  query.rs
sifu_axuum/src/grpc/: mod.rs
sifu_axuum/tests/: test_sound_link.rs
wasm-demo/: Cargo.toml  build.sh  index.html  main.js  tailwind.config.js
wasm-demo/src/: lib.rs
wasm-demo/www/: index.html  main.js  style.css
webbvueetauri/: .env.example  index.html  pnpm-workspace.yaml  tailwind.config.js  vite.config.ts
webbvueetauri/public/: word_frequency_list.json
webbvueetauri/src/: App.vue  index.css  main.ts  vite-env.d.ts
webbvueetauri/src-tauri/: Cargo.toml  tauri.conf.json
webbvueetauri/src/src-wasm/: Cargo.toml  build.rs
webbvueetauri/src/src-wasm/src/: lib.rs
webbvueetauri/src/src-wasm/src/api/: admin.rs  chat.rs  clipboard.rs  dict.rs  files.rs  ggtt.rs  helpers.rs  image.rs  init.rs  media_path.rs  note.rs  openai.rs  short_note.rs  song.rs  user.rs  video.rs  ws.rs  zici.rs
webbvueetauri/src/src-wasm/src/utils/: base64.rs  calculator.rs  console_log.rs  game2048.rs  greeter.rs  image_convert.rs  minesweeper.rs  mod.rs  password.rs  qrcode.rs  qrscan.rs  snake.rs  tetris.rs  timestamp.rs  uuid.rs
(+147 files in other folders)
