[workspace]
members = [
    "common",
    "kongde/rust",
    "sifu_axuum",
    "webbvueetauri/src-tauri",
    "webbvueetauri/src/src-wasm",
    "my_type",
    "local-agent",
]


resolver = "2"

[workspace.dependencies]
axum = { version = "0.8.8", features = ["ws", "multipart"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["serde", "v7"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "sqlite",
    "macros",
    "chrono",
    "uuid",
] }
clap = { version = "4.5.39", features = ["derive", "env"] }
lazy_static = "1.5.0"
dotenv = "0.15.0"
tonic = { version = "0.13.1", features = ["prost"] }
prost = "0.13.5"
tower-http = { version = "0.6.6", features = ["full"] }
axum-extra = { version = "0.12.3", features = ["typed-header"]}
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
quick-xml = { version = "0.37", features = ["serialize"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
percent-encoding = "2.3"
tower = "0.5"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1.11"
fancy-regex = "0.14"
http = "1.2"

env_logger = "0.11"
log = "0.4"
lofty = "0.22"
image = "0.25"
color_quant = "1.1"
once_cell = "1.20"
anyhow = "1.0.100"
futures = "0.3"
rayon = "1.10"
fast_image_resize = { version = "5", features = ["rayon"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots", "connect", "handshake"] }
webrtc = "0.17"
urlencoding = "2.1"

console_error_panic_hook = "0.1.7"
walkdir = "2.5"
thiserror = "2.0.18"
redis = { version = "0.28", features = ["tokio-comp", "connection-manager"] }
html2text = "0.14"
tempfile = "3.10"
