[package]
name = "common"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mhtml2md"
path = "src/bin/mhtml2md.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5", "v6", "v7"] }
rand = "0.8.5"
getrandom = { version = "0.2.17", features = ["js"] }
base64 = { workspace = true }
urlencoding = "2.1.3"
thiserror = {workspace = true}
anyhow.workspace = true
html2text = "0.14"
my_type = { path = "../my_type" }

# 为不同目标配置不同的依赖
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx = { workspace = true }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
tokio = { workspace = true }
lofty = { workspace = true }
rayon = { workspace = true }
image = { workspace = true }
regex = { workspace = true }
scraper = "0.23"
ego-tree = "0.10"
quoted_printable = "0.5"
axum.workspace = true
ort = "2.0.0-rc.12"
ndarray = "0.17"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }


