[package]
name = "local-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "signal"] }
clap = { workspace = true }
arboard = "3.4"
image = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
chrono = { workspace = true }
dirs = "6.0"
serde_json = { workspace = true }
common = { path = "../common" }
rayon = { workspace = true }
sqlx = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
