[workspace]

[package]
name = "wasm-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.4"
web-sys = { version = "0.3", features = ["console", "Document", "Element", "HtmlInputElement", "Window", "HtmlElement", "Storage", "KeyboardEvent"] }
js-sys = "0.3"
common = { path = "../common" }
my_type = { path = "../my_type" }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
