[package]
name = "rust_lib_kongde"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_lib_kongde"
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.12.0", features = ["chrono", "uuid"] }
env_logger = "0.11.8"
log = "0.4.29"
chrono = { version = "0.4", features = ["serde"] }
lofty = "0.22"
image = "0.25"
color_quant = "1.1"
once_cell = "1.21.3"
lazy_static = "1.5"
anyhow = "1.0.100"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = "0.3.31"
strip-ansi-escapes = "0.2.0"
base64 = "0.22"
urlencoding = "2.1"
quick-xml = { version = "0.39.0", features = ["serialize"] }
common = { path = "../../common" }
my_type = { path = "../../my_type" }
uuid.workspace = true

[features]
default = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

# 网络 / 平台相关，仅 native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest.workspace = true
tokio-tungstenite.workspace = true
webrtc = { workspace = true }
tokio = { version = "1", features = ["sync", "macros", "rt"] }
rayon = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }

[target.'cfg(target_os = "linux")'.dependencies]
env_logger = "0.11"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
