[package]
name = "wasm"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
web-sys = { version = "0.3", features = ["Request", "RequestInit", "RequestMode", "Response", "Headers", "Window", "console", "WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent", "BinaryType"] }
js-sys = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
quick-xml = "0.30"
base64 = "0.22"
my_type = { version = "0.1.0", path = "../../../my_type" }
urlencoding = "2.1"
common = { version = "0.1.0", path = "../../../common" }


[profile.release]
opt-level = "s"

[build-dependencies]
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
